crates/fixtures/tests/snapshots/hostile__content_degenerate_transform.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 256000,
    "height": 215040,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 30720,
          "ty": 30720
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Zero scale cannot erase this room. ",
            "glyphs": [
              {
                "id": 27,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 6206,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 45,
                "x": 11951,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 16603,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 1,
                "x": 22787,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 46,
                "x": 25412,
                "y": 10707,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 30,
                "x": 30301,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 28,
                "x": 35798,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 39,
                "x": 41531,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 32,
                "x": 44888,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 1,
                "x": 50633,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 30,
                "x": 53258,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 28,
                "x": 58755,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 41,
                "x": 64432,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 41,
                "x": 71258,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 42,
                "x": 78084,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 47,
                "x": 84155,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 1,
                "x": 87816,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 32,
                "x": 90441,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 45,
                "x": 96186,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 28,
                "x": 100827,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 46,
                "x": 106560,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 32,
                "x": 111449,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 1,
                "x": 117194,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 47,
                "x": 119819,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 35,
                "x": 123480,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 36,
                "x": 130250,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 46,
                "x": 133607,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 1,
                "x": 138496,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 45,
                "x": 141121,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 42,
                "x": 145773,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 42,
                "x": 151957,
                "y": 10707,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 40,
                "x": 158141,
                "y": 10707,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 473,
                "x": 168290,
                "y": 10707,
                "text": {
                  "start": 33,
                  "end": 34
                }
              },
              {
                "id": 1,
                "x": 171669,
                "y": 10707,
                "text": {
                  "start": 34,
                  "end": 35
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Identity is the reported fallback.",
            "glyphs": [
              {
                "id": 10,
                "x": 0,
                "y": 24224,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 31,
                "x": 3954,
                "y": 24224,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 10341,
                "y": 24224,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 41,
                "x": 16086,
                "y": 24224,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 47,
                "x": 22856,
                "y": 24224,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 36,
                "x": 26517,
                "y": 24224,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 47,
                "x": 29874,
                "y": 24224,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 52,
                "x": 33535,
                "y": 24224,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 1,
                "x": 39302,
                "y": 24224,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 36,
                "x": 41927,
                "y": 24224,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 46,
                "x": 45284,
                "y": 24224,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 1,
                "x": 50173,
                "y": 24224,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 47,
                "x": 52798,
                "y": 24224,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 35,
                "x": 56459,
                "y": 24224,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 32,
                "x": 63229,
                "y": 24224,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 1,
                "x": 68974,
                "y": 24224,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 45,
                "x": 71599,
                "y": 24224,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 32,
                "x": 76251,
                "y": 24224,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 43,
                "x": 81883,
                "y": 24224,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 42,
                "x": 88450,
                "y": 24224,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 45,
                "x": 94634,
                "y": 24224,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 47,
                "x": 99613,
                "y": 24224,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 32,
                "x": 103274,
                "y": 24224,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 31,
                "x": 109019,
                "y": 24224,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 1,
                "x": 115406,
                "y": 24224,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 33,
                "x": 118031,
                "y": 24224,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 28,
                "x": 122018,
                "y": 24224,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 39,
                "x": 127751,
                "y": 24224,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 39,
                "x": 131108,
                "y": 24224,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 29,
                "x": 134465,
                "y": 24224,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 28,
                "x": 140964,
                "y": 24224,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 30,
                "x": 146697,
                "y": 24224,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 38,
                "x": 152070,
                "y": 24224,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 473,
                "x": 158231,
                "y": 24224,
                "text": {
                  "start": 33,
                  "end": 34
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
