crates/fixtures/tests/snapshots/hostile__content_deleted_targets.snap
---
source: crates/fixtures/tests/hostile.rs
expression: "serde_json::to_string_pretty(&content).unwrap()"
---
[
  {
    "width": 430080,
    "height": 307200,
    "items": [
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 36864,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The first paragraph has a  in it.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 10707,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6803,
                "y": 10707,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13573,
                "y": 10707,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 19318,
                "y": 10707,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 414,
                "x": 21943,
                "y": 10707,
                "text": {
                  "start": 4,
                  "end": 6
                }
              },
              {
                "id": 45,
                "x": 28893,
                "y": 10707,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 46,
                "x": 33545,
                "y": 10707,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 47,
                "x": 38434,
                "y": 10707,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 1,
                "x": 42095,
                "y": 10707,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 43,
                "x": 44720,
                "y": 10707,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 28,
                "x": 51287,
                "y": 10707,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 45,
                "x": 56964,
                "y": 10707,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 28,
                "x": 61605,
                "y": 10707,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 34,
                "x": 67226,
                "y": 10707,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 45,
                "x": 73061,
                "y": 10707,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 28,
                "x": 77702,
                "y": 10707,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 43,
                "x": 83210,
                "y": 10707,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 35,
                "x": 89664,
                "y": 10707,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 1,
                "x": 96434,
                "y": 10707,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 35,
                "x": 99059,
                "y": 10707,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 28,
                "x": 105829,
                "y": 10707,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 46,
                "x": 111562,
                "y": 10707,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 1,
                "x": 116451,
                "y": 10707,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 28,
                "x": 119076,
                "y": 10707,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 1,
                "x": 124809,
                "y": 10707,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 1,
                "x": 127434,
                "y": 10707,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 36,
                "x": 130059,
                "y": 10707,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 41,
                "x": 133416,
                "y": 10707,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 1,
                "x": 140242,
                "y": 10707,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 36,
                "x": 142867,
                "y": 10707,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 47,
                "x": 146224,
                "y": 10707,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 473,
                "x": 149885,
                "y": 10707,
                "text": {
                  "start": 32,
                  "end": 33
                }
              }
            ],
            "layer": "content"
          },
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 11264,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "The second paragraph loses a lette.",
            "glyphs": [
              {
                "id": 21,
                "x": 0,
                "y": 32416,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 35,
                "x": 6803,
                "y": 32416,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 32,
                "x": 13573,
                "y": 32416,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 1,
                "x": 19318,
                "y": 32416,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 46,
                "x": 21943,
                "y": 32416,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 32,
                "x": 26832,
                "y": 32416,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 30,
                "x": 32577,
                "y": 32416,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 42,
                "x": 38074,
                "y": 32416,
                "text": {
                  "start": 7,
                  "end": 8
                }
              },
              {
                "id": 41,
                "x": 44258,
                "y": 32416,
                "text": {
                  "start": 8,
                  "end": 9
                }
              },
              {
                "id": 31,
                "x": 51084,
                "y": 32416,
                "text": {
                  "start": 9,
                  "end": 10
                }
              },
              {
                "id": 1,
                "x": 57471,
                "y": 32416,
                "text": {
                  "start": 10,
                  "end": 11
                }
              },
              {
                "id": 43,
                "x": 60096,
                "y": 32416,
                "text": {
                  "start": 11,
                  "end": 12
                }
              },
              {
                "id": 28,
                "x": 66663,
                "y": 32416,
                "text": {
                  "start": 12,
                  "end": 13
                }
              },
              {
                "id": 45,
                "x": 72340,
                "y": 32416,
                "text": {
                  "start": 13,
                  "end": 14
                }
              },
              {
                "id": 28,
                "x": 76981,
                "y": 32416,
                "text": {
                  "start": 14,
                  "end": 15
                }
              },
              {
                "id": 34,
                "x": 82602,
                "y": 32416,
                "text": {
                  "start": 15,
                  "end": 16
                }
              },
              {
                "id": 45,
                "x": 88437,
                "y": 32416,
                "text": {
                  "start": 16,
                  "end": 17
                }
              },
              {
                "id": 28,
                "x": 93078,
                "y": 32416,
                "text": {
                  "start": 17,
                  "end": 18
                }
              },
              {
                "id": 43,
                "x": 98586,
                "y": 32416,
                "text": {
                  "start": 18,
                  "end": 19
                }
              },
              {
                "id": 35,
                "x": 105040,
                "y": 32416,
                "text": {
                  "start": 19,
                  "end": 20
                }
              },
              {
                "id": 1,
                "x": 111810,
                "y": 32416,
                "text": {
                  "start": 20,
                  "end": 21
                }
              },
              {
                "id": 39,
                "x": 114435,
                "y": 32416,
                "text": {
                  "start": 21,
                  "end": 22
                }
              },
              {
                "id": 42,
                "x": 117792,
                "y": 32416,
                "text": {
                  "start": 22,
                  "end": 23
                }
              },
              {
                "id": 46,
                "x": 123976,
                "y": 32416,
                "text": {
                  "start": 23,
                  "end": 24
                }
              },
              {
                "id": 32,
                "x": 128865,
                "y": 32416,
                "text": {
                  "start": 24,
                  "end": 25
                }
              },
              {
                "id": 46,
                "x": 134610,
                "y": 32416,
                "text": {
                  "start": 25,
                  "end": 26
                }
              },
              {
                "id": 1,
                "x": 139499,
                "y": 32416,
                "text": {
                  "start": 26,
                  "end": 27
                }
              },
              {
                "id": 28,
                "x": 142124,
                "y": 32416,
                "text": {
                  "start": 27,
                  "end": 28
                }
              },
              {
                "id": 1,
                "x": 147857,
                "y": 32416,
                "text": {
                  "start": 28,
                  "end": 29
                }
              },
              {
                "id": 39,
                "x": 150482,
                "y": 32416,
                "text": {
                  "start": 29,
                  "end": 30
                }
              },
              {
                "id": 32,
                "x": 153839,
                "y": 32416,
                "text": {
                  "start": 30,
                  "end": 31
                }
              },
              {
                "id": 47,
                "x": 159584,
                "y": 32416,
                "text": {
                  "start": 31,
                  "end": 32
                }
              },
              {
                "id": 47,
                "x": 163346,
                "y": 32416,
                "text": {
                  "start": 32,
                  "end": 33
                }
              },
              {
                "id": 32,
                "x": 167007,
                "y": 32416,
                "text": {
                  "start": 33,
                  "end": 34
                }
              },
              {
                "id": 473,
                "x": 172425,
                "y": 32416,
                "text": {
                  "start": 34,
                  "end": 35
                }
              }
            ],
            "layer": "content"
          }
        ]
      },
      {
        "type": "group",
        "transform": {
          "xx": 65536,
          "yx": 0,
          "xy": 0,
          "yy": 65536,
          "tx": 280576,
          "ty": 36864
        },
        "clip": null,
        "items": [
          {
            "type": "glyphs",
            "face": {
              "family": "Source Serif Pro",
              "hash": "199c8adc83479480d9aa5d942afe8f52"
            },
            "size": 8448,
            "color": [
              0,
              0,
              0,
              255
            ],
            "text": "Rebound.",
            "glyphs": [
              {
                "id": 19,
                "x": 0,
                "y": 29950,
                "text": {
                  "start": 0,
                  "end": 1
                }
              },
              {
                "id": 32,
                "x": 5415,
                "y": 29950,
                "text": {
                  "start": 1,
                  "end": 2
                }
              },
              {
                "id": 29,
                "x": 9639,
                "y": 29950,
                "text": {
                  "start": 2,
                  "end": 3
                }
              },
              {
                "id": 42,
                "x": 14513,
                "y": 29950,
                "text": {
                  "start": 3,
                  "end": 4
                }
              },
              {
                "id": 48,
                "x": 19066,
                "y": 29950,
                "text": {
                  "start": 4,
                  "end": 5
                }
              },
              {
                "id": 41,
                "x": 23991,
                "y": 29950,
                "text": {
                  "start": 5,
                  "end": 6
                }
              },
              {
                "id": 31,
                "x": 29110,
                "y": 29950,
                "text": {
                  "start": 6,
                  "end": 7
                }
              },
              {
                "id": 473,
                "x": 33900,
                "y": 29950,
                "text": {
                  "start": 7,
                  "end": 8
                }
              }
            ],
            "layer": "content"
          }
        ]
      }
    ]
  }
]
